force-app/main/default/objects/Favorite__c/Favorite__c.object-meta.xml
<CustomObject>
    <label>Favorite</label>
    <nameField>
        <displayFormat>Fav-{0000}</displayFormat>
        <label>Favorite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favorites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>