force-app/main/default/objects/Favorite__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Favorites</relationshipLabel>
    <relationshipName>Favorites</relationshipName>
    <type>Lookup</type>
</CustomField>