force-app/main/default/objects/Favorite__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Favorites</relationshipLabel>
    <relationshipName>Favorites</relationshipName>
    <type>Lookup</type>
</CustomField>